src/objects/ADvendio__InvoiceItem__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__AccountingRecordsCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the record to prevent future Accounting Record creation</description>
        <inlineHelpText>Marks the record to prevent future Accounting Record creation</inlineHelpText>
        <label>Accounting Records Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdDayOfWeek__c</fullName>
        <label>AdDayOfWeek</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdHourOfDay__c</fullName>
        <label>AdHourOfDay</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdKeyValues__c</fullName>
        <label>AdKeyValues</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdOperatingSystems__c</fullName>
        <label>AdOperatingSystems</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecAdTypeExternalName__c</fullName>
        <label>Ad Type External</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecAdTypeName__c</fullName>
        <label>Ad Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecDescriptionOnPDF__c</fullName>
        <label>Ad Spec Description on PDF</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecDistribution__c</fullName>
        <label>Ad Spec Distribution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecExternalName__c</fullName>
        <label>Ad Spec External Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecName__c</fullName>
        <label>Ad Spec</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecPlacementExternalName__c</fullName>
        <label>Placement External</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecPlacementName__c</fullName>
        <label>Placement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecSiteExternalName__c</fullName>
        <label>Site External</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecSiteName__c</fullName>
        <label>Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecUseExternalNameOnPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ad Spec Use External Name on PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdWebBrowsers__c</fullName>
        <label>AdWebBrowsers</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserCountryCode__c</fullName>
        <description>Country of Sales Rep (used for VAT calculation)</description>
        <formula>ADvendio__Invoice__r.ADvendio__SalesRep__r.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Representative Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyCommissionAmount__c</fullName>
        <label>Agency Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyCommission__c</fullName>
        <label>Agency Commission</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__AmountNet__c</fullName>
        <label>Amount Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__BillingCategory__c</fullName>
        <label>Billing Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BillingPeriodEndDate__c</fullName>
        <formula>ADvendio__Invoice__r.ADvendio__BillingPeriodEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__BillingPeriodStartDate__c</fullName>
        <formula>ADvendio__Invoice__r.ADvendio__BillingPeriodStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__BookedQuantity__c</fullName>
        <label>Booked Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignItem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to the connected Campaign Item</description>
        <label>Campaign Item</label>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>InvoiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__ConnectedItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connected Item</label>
        <referenceTo>ADvendio__InvoiceItem__c</referenceTo>
        <relationshipLabel>Connected Items</relationshipLabel>
        <relationshipName>ConnectedItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__DaysThisInvoiceItem__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days This InvoiceItem</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__DaysThisItem__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days This Item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeliveryAutoImport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery AutoImport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Description__c</fullName>
        <description>This field is deprecated.</description>
        <label>Description (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__DistributionNote__c</fullName>
        <description>Note for PDF, explaining the share of this Invoice Item regarding the corresponding Campaign Item</description>
        <label>Distribution (Note)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__DistributionPeriod__c</fullName>
        <description>Defines if values are split with daily or monthly precision.
This refers for automated splits</description>
        <inlineHelpText>Defines if values are split with daily or monthly precision.
This refers for automated splits</inlineHelpText>
        <label>Distribution (Period)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__DistributionRatio__c</fullName>
        <description>Calculated ratio of the split for this item (automated splits).</description>
        <inlineHelpText>Calculated ratio of the split for this item (automated splits).</inlineHelpText>
        <label>Distribution (Ratio)</label>
        <precision>18</precision>
        <scale>17</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__DistributionUnit__c</fullName>
        <description>Defines which value (amount or quantity) is split in automated splits.</description>
        <inlineHelpText>Defines which value (amount or quantity) is split in automated splits.</inlineHelpText>
        <label>Distribution (Unit)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__FCAdServedEvery__c</fullName>
        <label>FC AdServed Every</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__FCPeriod__c</fullName>
        <label>FC Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>minute</fullName>
                </value>
                <value>
                    <fullName>hour</fullName>
                </value>
                <value>
                    <fullName>day</fullName>
                </value>
                <value>
                    <fullName>week</fullName>
                </value>
                <value>
                    <fullName>month</fullName>
                </value>
                <value>
                    <fullName>year</fullName>
                </value>
                <value>
                    <fullName>campaign</fullName>
                </value>
                <value>
                    <fullName>session</fullName>
                </value>
                <value>
                    <fullName>browser</fullName>
                </value>
                <value>
                    <fullName>visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__FCQuantity__c</fullName>
        <label>FC Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__FlexiblePaymentAmount__c</fullName>
        <description>Flexible payment plan only. This field is automatically populated with the predefined flexible payment plan amount of the related campaign item. Do not edit.</description>
        <inlineHelpText>This field is automatically populated with the predefined flexible payment plan amount of the related campaign item.</inlineHelpText>
        <label>Flexible Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Frequency__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__FromDate__c</fullName>
        <inlineHelpText>Item&apos;s Startdate of complete runtime</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__GrossAmountB1__c</fullName>
        <label>Gross Amount B1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__GrossAmountB2__c</fullName>
        <label>Gross Amount B2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__GrossAmountB3__c</fullName>
        <label>Gross Amount B3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__GuaranteedAI__c</fullName>
        <label>Guaranteed AI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideContentTargetingOnPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Content Targeting On PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideFCOnPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide FC On PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideGeoTargetingOnPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Geo Targeting On PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideKeyValueTargetingOnPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Key Value Targeting On PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HidePublicationDateTargetingOnPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Publication Date Targeting On PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideTechnicalTargetingOnPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Technical Targeting On PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideTimeTargetingOnPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Time Targeting On PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceAccountingDate__c</fullName>
        <formula>ADvendio__Invoice__r.ADvendio__AccountingDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Startdate of this Invoice&apos;s date range</inlineHelpText>
        <label>Invoice Accounting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceAccountingEndDate__c</fullName>
        <formula>ADvendio__Invoice__r.ADvendio__AccountingEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enddate of this Invoice&apos;s date range</inlineHelpText>
        <label>Invoice Accounting End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceCreationType__c</fullName>
        <formula>TEXT( ADvendio__Invoice__r.ADvendio__CreationType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Creation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceDate__c</fullName>
        <formula>ADvendio__Invoice__r.ADvendio__InvoiceDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceItemEndDate__c</fullName>
        <inlineHelpText>Enddate of this Item&apos;s date range in this Invoice</inlineHelpText>
        <label>Invoice Item End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceItemStartDate__c</fullName>
        <inlineHelpText>Startdate of this Item&apos;s date range in this Invoice</inlineHelpText>
        <label>Invoice Item Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceSurchargeB2Abs__c</fullName>
        <label>Invoice Surcharge B2 (Abs.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceSurchargeB3Abs__c</fullName>
        <label>Invoice Surcharge B3 (Abs.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>ADvendio__Invoice__c</referenceTo>
        <relationshipName>InvoiceItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedAmountNet1__c</fullName>
        <label>Invoiced Amount N1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedAmountNet2__c</fullName>
        <label>Invoiced Amount N2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedAmountNet3__c</fullName>
        <label>Invoiced Amount N3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedQuantityMultiplier__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Invoiced Quantity Multiplier</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>InvoicedQuantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__IsCPMPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Treats given SalesPrice as CPM or as UnitPrice</description>
        <inlineHelpText>Treats given SalesPrice as CPM or as UnitPrice</inlineHelpText>
        <label>Is CPM Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ItemId__c</fullName>
        <externalId>true</externalId>
        <label>Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ItemRecordType__c</fullName>
        <label>Item Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__LineDescription__c</fullName>
        <description>This Field is used on Invoice PDF, normally pushed over BA Mapping from the Campaign Item to the Invoice Item.</description>
        <inlineHelpText>Enter a comment to this position which will be shown on the Invoice.</inlineHelpText>
        <label>Line Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__LinearDistribution__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This Checkbox defines, if the amount is distributed linear or not. This is used for fix price amounts.</description>
        <inlineHelpText>This Checkbox defines, if the amount is distributed linear or not. This is used for fix price amounts.</inlineHelpText>
        <label>Linear Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Package__c</fullName>
        <label>Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PacketItemId__c</fullName>
        <label>Packet Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PacketItemPackage__c</fullName>
        <label>Packet Item Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionNumberAppendix__c</fullName>
        <description>Additional field to add after the position number. For example if you have the position number &apos;3&apos; you can add the appendix &apos;.2&apos; to get the joined position number &apos;3.2&apos;</description>
        <label>Position Number Appendix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionNumber__c</fullName>
        <label>Position Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Prorated__c</fullName>
        <label>Prorated</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__PublisherPayoutDone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates if the publisher payout has been calculated.</description>
        <inlineHelpText>indicates if the publisher payout has been calculated.</inlineHelpText>
        <label>Publisher Payout Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__QuantityDeliveredSum__c</fullName>
        <label>Quantity Delivered Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__QuantityDelivered__c</fullName>
        <label>Delivered Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__RateDiscount1__c</fullName>
        <label>Quantity Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__RateDiscount2Name__c</fullName>
        <label>Customer Discount (Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RateDiscount2__c</fullName>
        <label>Customer Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__RateDiscount3__c</fullName>
        <label>Agency Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__RateDiscount4Name__c</fullName>
        <label>Special Discount (Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Salesprice__c</fullName>
        <label>Salesprice</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedCityInformation__c</fullName>
        <label>Selected City Information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedContentInformation__c</fullName>
        <label>Selected Content Information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedCountryInformation__c</fullName>
        <label>Selected Country Information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedPublicationDateInformation__c</fullName>
        <label>Selected Publication Date Information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedRegionInformation__c</fullName>
        <label>Selected Region Information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowOnPDF__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show on PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowPacketComponentOnPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Packet Component On PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowThirdPartyCommission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Third Party Commission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__SurchargeB2Abs__c</fullName>
        <description>This surcharge will be added to Gross Amount B2 to get Gross Amount B1.</description>
        <inlineHelpText>This surcharge will be added to Gross Amount B2 to get Gross Amount B1.</inlineHelpText>
        <label>Surcharge B2 (Abs.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__SurchargeB2__c</fullName>
        <description>This surcharge will be added to Gross Amount B2 to get Gross Amount B1.</description>
        <inlineHelpText>This surcharge will be added to Gross Amount B2 to get Gross Amount B1.</inlineHelpText>
        <label>Surcharge B2 (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__SurchargeB3Abs__c</fullName>
        <description>This surcharge will be added to Gross Amount B3 to get Gross Amount B2.</description>
        <inlineHelpText>This surcharge will be added to Gross Amount B3 to get Gross Amount B2.</inlineHelpText>
        <label>Surcharge B3 (Abs.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__SurchargeB3__c</fullName>
        <description>This surcharge will be added to Gross Amount B3 to get Gross Amount B2.</description>
        <inlineHelpText>This surcharge will be added to Gross Amount B3 to get Gross Amount B2.</inlineHelpText>
        <label>Surcharge B3 (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__SurchargeSalesPrice__c</fullName>
        <label>Surcharge Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__TaxableAmountType__c</fullName>
        <label>Taxable Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__TaxableAmountType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ThirdPartyCommission__c</fullName>
        <label>Third Party Commission</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADvendio__UntilDate__c</fullName>
        <inlineHelpText>Item&apos;s Enddate of complete runtime</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__VATAmount__c</fullName>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__VATExempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT-Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__VATRate__c</fullName>
        <label>VAT Rate %</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__VATTotal__c</fullName>
        <label>VAT Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__VATType__c</fullName>
        <label>VAT Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__eCPM__c</fullName>
        <label>eCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Adservertyp__c</fullName>
        <label>Adservertyp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Buchungsschluessel__c</fullName>
        <formula>IF( ADvendio__InvoicedAmountNet2__c  &gt;= 0, &quot;50&quot;, &quot;40&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buchungsschlüssel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_InvoiceStatus__c</fullName>
        <description>Status der Rechnung (Wird für Filter der DWH SST benötigt)</description>
        <formula>TEXT(ADvendio__Invoice__r.ADvendio__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status der Rechnung</inlineHelpText>
        <label>Rechnungs-Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Mediagattung__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mediagattung</label>
        <referenceTo>SomDig_Mediagattung__c</referenceTo>
        <relationshipLabel>Rechnungspositionen</relationshipLabel>
        <relationshipName>Rechnungspositionen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Mediagattungs_Differenzierung__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mediagattungs-Differenzierung</label>
        <referenceTo>SomDig_MediagattungsDifferenzierung__c</referenceTo>
        <relationshipLabel>Rechnungspositionen</relationshipLabel>
        <relationshipName>Rechnungspositionen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Mediagattungs_Segement_Name__c</fullName>
        <label>Mediagattungs-Segement Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Mediagattungs_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mediagattungs-Segment</label>
        <referenceTo>SomDig_MediagattungsSegment__c</referenceTo>
        <relationshipLabel>Rechnungspositionen</relationshipLabel>
        <relationshipName>Rechnungspositionen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Menge__c</fullName>
        <formula>ROUND(ADvendio__InvoicedQuantity__c / (100 + SomDig_Naturalrabatt__c) * 100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Menge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_Mn3__c</fullName>
        <description>Ticket 4177
MN2-Wert minus Skonto (wenn ein Skonto für die MK ausgewählt wurde) ergibt MN3</description>
        <formula>ADvendio__InvoicedAmountNet2__c * (1-ADvendio__Invoice__r.ADvendio__Early_Payment_Discount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MN2-Wert minus Skonto (wenn ein Skonto für die MK ausgewählt wurde) ergibt MN3</inlineHelpText>
        <label>MN3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_Naturalrabatt__c</fullName>
        <description>Naturalrabatt in Prozent (Ticket 06323)</description>
        <label>Naturalrabatt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_Werbetraeger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Werbeträger</label>
        <referenceTo>ADvendio__Site__c</referenceTo>
        <relationshipLabel>Rechnungspositionen</relationshipLabel>
        <relationshipName>Rechnungspositionen</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice Item</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Alle_Rechnungspositionen</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Mediagattungs_Differenzierung__c</columns>
        <columns>SomDig_Mediagattungs_Segement_Name__c</columns>
        <columns>SomDig_Mediagattungs_Segment__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle Rechnungspositionen</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Ticket_4287</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__CampaignItem__c</columns>
        <columns>ADvendio__InvoiceAccountingDate__c</columns>
        <columns>ADvendio__InvoiceDate__c</columns>
        <columns>ADvendio__Invoice__c</columns>
        <columns>ADvendio__GrossAmountB1__c</columns>
        <columns>ADvendio__GrossAmountB3__c</columns>
        <columns>ADvendio__InvoicedAmountNet1__c</columns>
        <columns>ADvendio__InvoicedAmountNet2__c</columns>
        <columns>ADvendio__InvoicedAmountNet3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__CampaignItem__c</field>
            <operation>equals</operation>
        </filters>
        <label>Ticket 4287</label>
        <language>de</language>
    </listViews>
</CustomObject>